--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My App</title>
+        <title>My New App Hi</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/libs/oj/v1.1.2/alta/oj-alta-min.css" 
