--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My New App FU Oracle from Yoshiye</title>
+        <title>My App</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/libs/oj/v1.1.2/alta/oj-alta-min.css" 
@@ -30,13 +30,6 @@
                 <div data-bind="ojModule: { name: router.stateId()}" class="routerDiv"></div>
             </div>
         </div>
-<div id="routing-container">
-                <div id='buttons-container' data-bind="foreach: router.states">
-                   Use the go function of the state as the handler for a click binding 
-                  <input type="button"
-                         data-bind="click: go, attr: {id: id},
-                         ojComponent: {component: 'ojButton', label: label}"/>
-                </div>
-             </div>
+z
     </body>
 </html>
