--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -4,14 +4,14 @@
         <title>My App</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/libs/oj/v1.1.2/alta/oj-alta-min.css" 
-              rel="stylesheet" 
-              type="text/css"/>
+        <link href="css/oj/v1.1.2/alta/oj-alta.css" rel="stylesheet" type="text/css"/>
+<!--        Once completed remove override.css from file-->
+        <link href="css/oj-override.css" rel="stylesheet" type="text/css"/>
         <script data-main="js/main" 
                 src="js/libs/require/require.js">
         </script>
         <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" href="css/override.css">
+<!--        <link rel="stylesheet" href="css/override.css">-->
     </head>
     <body id="globalBody">
         <div id="appDrawer" class="oj-offcanvas-start">
