--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My App</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/oj/v1.1.2/alta/oj-alta.css" rel="stylesheet" type="text/css"/>
-<!--        Once completed remove override.css from file-->
-        <link href="css/oj-override.css" rel="stylesheet" type="text/css"/>
-        <script data-main="js/main" 
-                src="js/libs/require/require.js">
-        </script>
-        <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-<!--        <link rel="stylesheet" href="css/override.css">-->
-    </head>
-    <body id="globalBody">
-        <div id="appDrawer" class="oj-offcanvas-start">
-            <div data-bind="ojModule: {
+
+<head>
+    <title>My App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/oj/v1.1.2/alta/oj-alta.css" rel="stylesheet" type="text/css" />
+    <!--        Once completed remove override.css from file-->
+    <link href="css/oj-override.css" rel="stylesheet" type="text/css" />
+    <script data-main="js/main" src="js/libs/require/require.js">
+    </script>
+    <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!--        <link rel="stylesheet" href="css/override.css">-->
+</head>
+
+<body id="globalBody">
+    <div id="appDrawer" class="oj-offcanvas-start">
+        <div data-bind="ojModule: {
                         name: 'header', 
-                        viewName: 'demoAppHeaderOffCanvasTemplate'}">
+                        viewName: 'off-canvas-template-left'}">
+        </div>
+    </div>
+    <header data-bind="ojModule: { name: 'header'}"></header>
+    <div class="oj-row">
+        <div class="oj-xl-12 oj-lg-12 oj-sm-12 oj-col" id="mainCol">
+            <div class="oj-row">
+                <div class="oj-sm-only-hide oj-md-only-hide oj-lg-2 oj-xl-2 oj-col">
+                    <div data-bind="ojModule: {
+                        name: 'sidebar-left',
+                        viewName: 'sidebar-left'}">
+                    </div>
+                </div>
+                <div class="oj-sm-12 oj-md-12 oj-lg-10 oj-xl-10 oj-col">
+                    <div data-bind="ojModule: { name: router.stateId()}" class="routerDiv"></div>
+                </div>
             </div>
         </div>
-        <header data-bind="ojModule: { name: 'header'}"></header>
-        <div class="oj-row">
-            <div class="oj-xl-12 oj-lg-12 oj-sm-12" id="mainCol">
-                <div data-bind="ojModule: { name: router.stateId()}" class="routerDiv"></div>
-            </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
