--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <header data-bind="ojModule: { name: 'header'}" class="app-header"></header>
-    <div class="oj-row">
+    <div class="oj-row" id="app-main-area">
         <div class="oj-xl-12 oj-lg-12 oj-sm-12 oj-col" id="mainCol">
             <div class="oj-row">
                 <div class="oj-sm-only-hide oj-md-only-hide oj-lg-2 oj-xl-2 oj-col">
