--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -30,11 +30,13 @@
                         viewName: 'sidebar-left'}">
                     </div>
                 </div>
-                <div class="oj-sm-12 oj-md-12 oj-lg-10 oj-xl-10 oj-col page-area">
+                <div class="oj-sm-12 oj-lg-10 oj-col page-area">
                     <div data-bind="ojModule: { name: router.stateId()}" class="routerDiv"></div>
+                    <footer data-bind="ojModule: { name: 'footer'}" class="app-footer"></footer>
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 
