Added observables to do view update - still working on this

--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="oj-sm-12 oj-lg-10 oj-col page-area">
                     <div id="content" data-bind="ojModule: $root.router.moduleConfig"></div>
-                    <footer data-bind="ojModule: { name: 'footer'}" class="app-footer"></footer>
+<!--                    <footer data-bind="ojModule: { name: 'footer'}" class="app-footer"></footer>-->
                 </div>
             </div>
         </div>
