--- a/OracleJETApplication/login.html
+++ b/OracleJETApplication/login.html
@@ -8,14 +8,32 @@
     <link href="css/oj/v1.1.2/alta/oj-alta.css" rel="stylesheet" type="text/css" />
     <!--        Once completed remove override.css from file-->
     <link href="css/oj-override.css" rel="stylesheet" type="text/css" />
-    <script data-main="js/main" src="js/libs/require/require.js">
+<!--    <script data-main="js/main" src="js/libs/require/require.js">-->
     </script>
 
     <script src="js/modules/login.js"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000" id="loginPage">
+    <script type="text/javascript">
+
+        $(function() {
+            $('#Login').on('click', function(){
+                var url = window.location.pathname;
+                var root = location.protocol + '//' + location.host;
+                var q = document.URL.split('?')[1];
+                var fullLink = root + url.replace('login', 'index') + '?' + q;
+                if(q == undefined){
+                    window.location.href = root + url.replace('login', 'index');
+                }else{    
+                    window.location.href = fullLink;
+                }
+            });
+
+        });
+        </script>
 	<div class="topbackground">
 		<div class="w-container container" style="color:#666;">
 			<div class="circle_1"></div>
@@ -48,10 +66,9 @@
 						<br>
 						<input type="Password" maxlength="20" autocomplete="off" style="width:250px; height:30px; margin-bottom:10px;" name="pwd" id="pwd" placeholder="Password" >
 						<br>
-						<a href="index.html" class="btn_primary buttonclass" style="margin-bottom:10px;" id="Login">Sign In</a><br>
+						<a class="btn_primary buttonclass" style="margin-bottom:10px;" id="Login">Sign In</a><br>
 						<br>
 						<a href="#"  onclick="mymicrosPasswordHint()" class="text">Forgot your password?</a>
-
 					</form>
 				</div>
 			</div>
