--- a/OracleJETApplication/login.html
+++ b/OracleJETApplication/login.html
@@ -8,11 +8,11 @@
     <link href="css/oj/v1.1.2/alta/oj-alta.css" rel="stylesheet" type="text/css" />
     <!--        Once completed remove override.css from file-->
     <link href="css/oj-override.css" rel="stylesheet" type="text/css" />
-<!--    <script data-main="js/main" src="js/libs/require/require.js">-->
-    </script>
+<!--    <script data-main="js/main" src="js/libs/require/require.js">
+    </script>-->
 
     <script src="js/modules/login.js"></script>
-<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css" />
 </head>
 
