--- a/OracleJETApplication/login.html
+++ b/OracleJETApplication/login.html
@@ -12,7 +12,7 @@
     </script>-->
 
     <script src="js/modules/login.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="js/libs/jquery/jquery-2.1.3.min.js" type="text/javascript"></script>
     <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css" />
 </head>
 
