--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -11,6 +11,7 @@
     <script data-main="js/main" src="js/libs/require/require.js">
     </script>
     <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="globalBody">
