--- a/OracleJETApplication/index.html
+++ b/OracleJETApplication/index.html
@@ -4,14 +4,13 @@
 <head>
     <title>My App</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <link href="css/oj/v1.1.2/alta/oj-alta.css" rel="stylesheet" type="text/css" />
     <!--        Once completed remove override.css from file-->
     <link href="css/oj-override.css" rel="stylesheet" type="text/css" />
     <script data-main="js/main" src="js/libs/require/require.js">
     </script>
     <link href="css/libs/fa/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="globalBody">
