--- a/OracleJETApplication/login.html
+++ b/OracleJETApplication/login.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
 
         $(function() {
-            $('#Login').on('click', function(){
+            $('#loginBtn').on('click', function(){
                 var url = window.location.pathname;
                 var root = location.protocol + '//' + location.host;
                 var q = document.URL.split('?')[1];
@@ -34,6 +34,62 @@
 
         });
         </script>
+        <div class="lowerbar"></div>
+        <div class="container" style="color:#666;">
+            <div class="desktopLogo">
+                <div class="circle_1"></div>
+                <div class="circle_2"></div>
+                <div class="circle_3"></div>
+            </div>
+            <div class="body-container">
+                <div class="topbackground">
+                    <h2>Sign In to</h2>
+                    <div class="logo_container">
+                        <img src="css/images/logo_oracle.png" class="logo" width="190px"> Hospitality
+                    </div>
+                    <h1>Reporting and Analytics</h1>
+
+                    <p class="textlg">
+                        <em>formerly mymicros.net</em>
+                    </p>
+                </div>
+                <div class="myMicrosLogo-container">
+                    <img src="css/images/myMicros-logo-top.png" width="120px" class="myMicrosLogo-top"/>
+                    <img src="css/images/myMicros-logo.png" width="120px" class="myMicrosLogo-bottom"/>
+                </div>
+                <div class="formcontainer">
+                    <div class="w-form">
+
+                        <div id="messagesDivId"  class="error">
+                             <p>This web page has detected that you are using an uncertified browser. The page is best viewed with Microsoft Internet Explorer 9, 10, 11, or Mozilla Firefox.</p>
+                        </div>
+
+                        <form name="login"  action="/index.html" method="POST" id="loginFrom">
+                            <input type="hidden" name="LOGIN"/>
+                            <input type="hidden" name="action"/>
+
+                            <input type="Text" name="usr" id="usr" class="textfield" value="" maxlength="25" placeholder="User Name"  >
+
+                            <input type="Text" name="cpny" id="cpny" class="textfield" value="" maxlength="32" placeholder="Company" >
+
+                            <input type="Password" maxlength="20" autocomplete="off" name="pwd" id="pwd" placeholder="Password" >
+
+                            <a class="btn_primary buttonclass" style="margin-bottom:10px;" id="loginBtn">Log In</a>
+                            <div class="fgp-container">
+                                <a href="#"  onclick="mymicrosPasswordHint()">Forgot your password?</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="footer">
+                <div class="hr"></div>
+                <span>Get InMotion Mobile</span>
+                <a href=""><img src="css/images/apple.png" width="43" height="43" class="icon"></a>
+                <a href=""><img src="css/images/android.png" width="43" height="43" class="icon"></a>
+            </div>
+            </div>
+        </div>
+<!--
 	<div class="topbackground">
 		<div class="w-container container" style="color:#666;">
 			<div class="circle_1"></div>
@@ -91,8 +147,7 @@
 			<div class="hr"></div>
 		</div>
 	</div>
-
-<div class="lowerbar"></div>
+-->
 </body>
 
 </html>
