--- a/OracleJETApplication-V-2/login.html
+++ b/OracleJETApplication-V-2/login.html
@@ -19,14 +19,14 @@
 <body bgcolor="#FFFFFF" text="#000000" id="loginPage">
     <script type="text/javascript">
         $(function(){
-           $('#usr').val('john.hancock@oracle.com');
-           $('#cpny').val('mrs');
-           $('#pwd').val('micros2011');
+           //$('#usr').val('john.hancock@oracle.com');
+          // $('#cpny').val('mrs');
+           //$('#pwd').val('micros2011');
         });
 
         $(function() {
             $('#loginBtn').on('click', function(){
-                var selectId = $('#locationId option:selected').val();
+                var selectId = 'Baltimore';//$('#locationId option:selected').val();
 
                 var url = window.location.pathname;
                 var root = location.protocol + '//' + location.host;
@@ -50,14 +50,14 @@
             </div>
             <div class="body-container">
                 <div class="topbackground">
-                    <h2>Sign In to</h2>
+                    <h2> </h2>
                     <div class="logo_container">
                         <img src="css/images/logo_oracle.png" class="logo" width="190px"> Hospitality
                     </div>
-                    <h1>Reporting and Analytics</h1>
+                    <h1></h1>
 
                     <p class="textlg">
-                        <em>formerly mymicros.net</em>
+                        <em>Welcome Back</em>
                     </p>
                 </div>
                 <div class="myMicrosLogo-container">
@@ -69,33 +69,17 @@
                         <form name="login"  action="/index.html" method="POST" id="loginFrom">
                             <input type="hidden" name="LOGIN"/>
                             <input type="hidden" name="action"/>
+                            <label for="usr" style="float: left">User Name</label>
+                            <input type="Text" name="usr" id="usr" class="textfield" value="" 
+                                   maxlength="25" placeholder=""  >
+                            <label for="usr" style="float: left">Company</label>
+                            <input type="Text" name="cpny" id="cpny" class="textfield" value="" 
+                                   maxlength="32" placeholder="" >
+                            <label for="pwd" style="float: left">Password</label>
+                            <input type="Password" maxlength="20" autocomplete="off" name="pwd" 
+                                   id="pwd" placeholder="" >
 
-                            <input type="Text" name="usr" id="usr" class="textfield" value="" maxlength="25" placeholder="User Name"  >
-
-                            <input type="Text" name="cpny" id="cpny" class="textfield" value="" maxlength="32" placeholder="Company" >
-
-                            <input type="Password" maxlength="20" autocomplete="off" name="pwd" id="pwd" placeholder="Password" >
-                            <div>
-                                <select id="locationId" name="locationSelect">
-                                    <option value="01">Beacon Hill</option>
-                                    <option value="02">Saab</option>
-                                    <option value="04">Time Square</option>
-                                    <option value="05">Rockefeller Center</option>
-                                    <option value="06">Theater District</option>
-                                    <option value="07">Peachtree Center</option>
-                                    <option value="08">Marietta</option>
-                                    <option value="09">South Beach</option>
-                                    <option value="10">Coral Gables</option>
-                                    <option value="11">Malibu</option>
-                                    <option value="12">Santa Monica</option>
-                                    <option value="13">West Hollywood</option>
-                                    <option value="14">Oakland</option>
-                                    <option value="15">Berkley</option>
-                                    <option value="16">Pacific Heights</option>
-                                </select>
-                            </div>
-
-                            <a class="btn_primary buttonclass" style="margin-bottom:10px;" id="loginBtn">Log In</a>
+                            <a class="btn_primary buttonclass" style="margin-bottom:10px;" id="loginBtn">Sign In</a>
                             <div class="fgp-container">
                                 <a href="#"  onclick="mymicrosPasswordHint()">Forgot your password?</a>
                             </div>
@@ -110,65 +94,6 @@
             </div>
             </div>
         </div>
-<!--
-	<div class="topbackground">
-		<div class="w-container container" style="color:#666;">
-			<div class="circle_1"></div>
-			<div class="circle_2"></div>
-			<div class="circle_3"></div>
-			<h2>Sign In</h2>
-			<div class="logo_container">
-				<img src="css/images/logo_oracle.png" class="logo" width="190px"> Hospitality
-			</div>
-			<h1>Reporting and Analytics</h1>
-
-			<p class="textlg" style="padding-bottom: 0px; padding-left: 345px; padding-right: 0px; padding-top: 40px;">
-				<em style="color:#fff">formerly mymicros.net</em>
-			</p>
-
-			<div class="formcontainer">
-				<div class="w-form">
-
-					<div id="messagesDivId"  class="text error">
-						 <p>This web page has detected that you are using an uncertified browser. The page is best viewed with Microsoft Internet Explorer 9, 10, 11, or Mozilla Firefox.</p>
-					</div>
-
-					<form name="login"  action="/index.html" method="POST" id="login">
-						<input type="hidden" name="LOGIN"/>
-						<input type="hidden" name="action"/>
-
-						<input type="Text" name="usr" id="usr" class="textfield text" style="width:250px; height:30px; margin-bottom:10px;" value="" maxlength="25" placeholder="User Name"  >
-						<br>
-						<input type="Text" name="cpny" id="cpny" class="textfield text" style="width:250px; height:30px; margin-bottom:10px;" value="" maxlength="32" placeholder="Company" >
-						<br>
-						<input type="Password" maxlength="20" autocomplete="off" style="width:250px; height:30px; margin-bottom:10px;" name="pwd" id="pwd" placeholder="Password" >
-						<br>
-						<a class="btn_primary buttonclass" style="margin-bottom:10px;" id="Login">Sign In</a><br>
-						<br>
-						<a href="#"  onclick="mymicrosPasswordHint()" class="text">Forgot your password?</a>
-					</form>
-				</div>
-			</div>
-		</div>
-
-		<div class="w-container footer" style="margin-left:25.5%">
-			<table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin-top:75px;">
-			<tbody>
-				<tr>
-					<td style="width:50%" class="textlg" align="left" valign="bottom" width="50%">
-					</td>
-					<td style="width:50%" class="text" align="right" valign="middle" width="50%">
-						Get InMotion Mobile
-						&nbsp;<a href="#" onClick="onclick_inMotion(1)"><img src="css/images/apple.png" width="43" height="43" class="icon"></a>
-						&nbsp;<a href="#" onClick="onclick_inMotion(2)"><img src="css/images/android.png" width="43" height="43" class="icon"></a>
-					</td>
-				</tr>
-			</tbody>
-			</table>
-			<div class="hr"></div>
-		</div>
-	</div>
--->
 </body>
 
 </html>
